# 24-sum-b-4-pe-portfolio-site

./: .env.example  .example.env  .gitignore  .pdm-python  .pylintrc  Dockerfile  README.md  compose.yaml  docker-compose.prod.yml  example.env  main.py  portfolio.db  pyproject.toml  pytest.ini  redeploy-site.sh  requirements.txt  run-tests.sh  test.js
.github/: pub_on_release.yaml  test_on_push.yaml
.github/workflows/: deploy.yaml  docker-image.yml  pub_on_release.yaml  test_on_push.yaml
portfolio/: __init__.py  api.py  auth.py  constants.py  db.py  mysql_db.py  routes.py  schemas.py  utils.py
portfolio/static/: manifest.json
portfolio/static/json/: about.json  education.json  hobbies.json  places.json  projects.json  work.json
portfolio/static/pwa/: manifest.json  robots.txt
portfolio/static/scripts/: contact.js  loading.js  map.js  nav.js  projects.js
portfolio/static/styles/: main.css  timeline.css
portfolio/static/styles/pico/: pico.min.css
portfolio/templates/: landing.jinja2  layout.jinja2
portfolio/templates/client/: 404.jinja2
portfolio/templates/pages/: contact.jinja2  hobbies.jinja2  projects.jinja2  timeline.jinja2
portfolio/templates/semantics/: footer.jinja2  nav.jinja2
portfolio/templates/views/: about.jinja2  education.jinja2  map.jinja2  work_experience.jinja2
tests/: __init__.py
tests/unit/: test_portfolio.db  test_routes.py
user_conf.d/: myportfolio.conf
